--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,15 +1,18 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_shuffle"
         android:icon="@drawable/android_music_player_rand"
         android:orderInCategory="1"
+        android:showAsAction="always"
         android:title="Shuffle"/>
 
     <item
         android:id="@+id/action_end"
         android:icon="@drawable/android_music_player_end"
         android:orderInCategory="2"
+        android:showAsAction="always"
         android:title="End"/>
 
 </menu>
