--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,14 +5,12 @@
         android:id="@+id/action_shuffle"
         android:icon="@drawable/android_music_player_rand"
         android:orderInCategory="1"
-        android:showAsAction="always"
-        android:title="Shuffle"/>
+        android:title="@string/shuffle"/>
 
     <item
         android:id="@+id/action_end"
         android:icon="@drawable/android_music_player_end"
         android:orderInCategory="2"
-        android:showAsAction="always"
-        android:title="End"/>
+        android:title="@string/end"/>
 
 </menu>
